Add favicon and improve mobile contrast for comparison section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Vistra.ia | Engenharia de Receita com IA</title>
     <meta name="description" content="Automatize seu contato comercial. Transforme estoque parado em receita." />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
